--- a/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
+++ b/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
@@ -73,7 +73,8 @@ aside h2 {
   font-size: 150%;
 }
 
-input, button {
+input,
+button {
   width: 100%;
   margin: 2% 0;
   padding: 1%;
@@ -88,15 +89,24 @@ footer {
 }
 
 /* TODO: Add styles that will hide the resource links by default */
-
-
+.resources {
+  ul {
+    display: none;
+  }
+}
 
 /* TODO: Add styles that will display the links when the mouse hovers over the parent element */
-
+.resources:hover {
+  ul {
+    display: block;
+  }
+}
 
 
 @media screen and (max-width: 768px) {
-  header, main {
+
+  header,
+  main {
     flex-direction: column;
   }
 
