--- a/18-Stu_Pseudo-Elements/Unsolved/assets/css/style.css
+++ b/18-Stu_Pseudo-Elements/Unsolved/assets/css/style.css
@@ -60,8 +60,27 @@ article p {
 }
 
 /* TODO: Style the term/phrase - underline, black text, grab cursor */
+#tooltip {
+  text-decoration: underline;
+  color: black;
+  cursor: grab;
+  position:relative;
+}
 
 /* TODO: Position tooltip above the term/phrase, same color as header and nav links, no border-radius, smaller font size */
+#tooltip:hover::after {
+  content:"Cascading Style Sheets";
+  background-color: #13293d;
+  color: white;
+  font-size: 80%;
+  border-radius: 0.1em;
+  position: absolute;
+  z-index: 1;
+  bottom: 1.5em;
+  left: -4em;
+  min-width: 150px;
+
+}
 
 aside {
   width: 25%;
